--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         //     10
         // )
         const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 100);
-        const renderer = new THREE.WebGLRenderer()
+        const renderer = new THREE.WebGLRenderer({
+            antialias: true,
+            alpha: true
+        })
         renderer.setSize(window.innerWidth, window.innerHeight)
         document.body.appendChild(renderer.domElement)
         const axesHelper = new THREE.AxesHelper(3);
@@ -52,9 +55,9 @@
         }
         `
 
-        const geometry = new THREE.PlaneGeometry(2, 2)
+        // const geometry = new THREE.PlaneGeometry(2, 2)
 
-        // const geometry = new THREE.BoxGeometry(2, 2,2)
+        const geometry = new THREE.BoxGeometry(2, 2, 2)
         const material = new THREE.ShaderMaterial({
             vertexShader: vertexShader,
             fragmentShader: fragmentShader,
@@ -62,22 +65,37 @@
         const plane = new THREE.Mesh(geometry, material)
         scene.add(plane)
         camera.position.z = 10;
-        camera.position.x = 2;
+        camera.position.x = 4;
         camera.position.y = 2;
         // console.log( scene )
         // console.log(geometry)
-
-    
-        console.log('plane', plane)
-        plane.scale.x = 10
-        plane.position.y = 0
-        // plane.scale.z = 4
-        plane.rotation.y = 1.2
-        plane.rotation.x = 5
-
-        renderer.render(scene, camera)
-
-
+        // console.log('plane', plane)
+        window.addEventListener('mousemove', (e) => {
+            let track1 = e.clientX - window.innerWidth / 2
+            let track2 = track1 / (window.innerWidth)
+            // console.log('track2', track2)          
+            console.log(Math.sin(Math.PI * track2))
+        })
+        var int1 = 10;
+        var int2 = 0;
+        var int3 = 1.2;
+        var int4 = 5;
+        const tick = () => {
+            int1 += 0.1;
+            int2 += 0.1;
+            int3 += 0.1;
+            int4 += 0.1;
+            // console.log('int1', int1)
+            // plane.scale.x = int1
+            // plane.position.y = int2
+            // plane.scale.z = 4
+            // plane.rotation.y = int3
+            // plane.rotation.x = int4
+            // plane.rotation.z = int4
+            renderer.render(scene, camera)
+            // requestAnimationFrame(tick)
+        }
+        tick()
     </script>
 </body>
 
